lex/y.output
Terminals unused in grammar

    NOTOKEN
    GREAT
    SMALL
    AND
    OR
    SEMICOLON


State 9 conflicts: 1 shift/reduce, 6 reduce/reduce


Grammar

    0 $accept: goals $end

    1 goals: commands

    2 commands: command
    3         | commands command

    4 command: complex_command
    5        | simple_command
    6        | SHNEWLINE
    7        | error SHNEWLINE

    8 complex_command: command_and_args piped_list iomodifier_list ampersandmodifier SHNEWLINE
    9                | command_and_args iomodifier_list ampersandmodifier SHNEWLINE
   10                | command_and_args piped_list iomodifier_list SHNEWLINE
   11                | command_and_args iomodifier_list SHNEWLINE

   12 simple_command: command_and_args iomodifier_opt SHNEWLINE

   13 piped_list: piped_list piped_command
   14           | ε

   15 piped_command: PIPE command_and_args

   16 command_and_args: command_word arg_list

   17 arg_list: arg_list argument
   18         | ε

   19 argument: WORD

   20 command_word: WORD

   21 iomodifier_list: iomodifier_list iomodifier
   22                | ε

   23 iomodifier: iomodifier_opt
   24           | ampersandappendmodifier
   25           | iomodifier_ipt
   26           | appendmodifier

   27 iomodifier_ipt: INPUT WORD

   28 ampersandappendmodifier: AMPERSANDAPPEND WORD

   29 iomodifier_opt: REDIRECT WORD

   30 appendmodifier: APPEND WORD

   31 ampersandmodifier: AMPERSAND


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7
    WORD <string_val> (258) 19 20 27 28 29 30
    NOTOKEN (259)
    GREAT (260)
    SHNEWLINE (261) 6 7 8 9 10 11 12
    AMPERSAND (262) 31
    PIPE (263) 15
    APPEND (264) 30
    SMALL (265)
    AMPERSANDAPPEND (266) 28
    AND (267)
    OR (268)
    SEMICOLON (269)
    REDIRECT (270) 29
    INPUT (271) 27


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    goals (18)
        on left: 1
        on right: 0
    commands (19)
        on left: 2 3
        on right: 1 3
    command (20)
        on left: 4 5 6 7
        on right: 2 3
    complex_command (21)
        on left: 8 9 10 11
        on right: 4
    simple_command (22)
        on left: 12
        on right: 5
    piped_list (23)
        on left: 13 14
        on right: 8 10 13
    piped_command (24)
        on left: 15
        on right: 13
    command_and_args (25)
        on left: 16
        on right: 8 9 10 11 12 15
    arg_list (26)
        on left: 17 18
        on right: 16 17
    argument (27)
        on left: 19
        on right: 17
    command_word (28)
        on left: 20
        on right: 16
    iomodifier_list (29)
        on left: 21 22
        on right: 8 9 10 11 21
    iomodifier (30)
        on left: 23 24 25 26
        on right: 21
    iomodifier_ipt (31)
        on left: 27
        on right: 25
    ampersandappendmodifier (32)
        on left: 28
        on right: 24
    iomodifier_opt (33)
        on left: 29
        on right: 12 23
    appendmodifier (34)
        on left: 30
        on right: 26
    ampersandmodifier (35)
        on left: 31
        on right: 8 9


State 0

    0 $accept: • goals $end

    error      shift, and go to state 1
    WORD       shift, and go to state 2
    SHNEWLINE  shift, and go to state 3

    goals             go to state 4
    commands          go to state 5
    command           go to state 6
    complex_command   go to state 7
    simple_command    go to state 8
    command_and_args  go to state 9
    command_word      go to state 10


State 1

    7 command: error • SHNEWLINE

    SHNEWLINE  shift, and go to state 11


State 2

   20 command_word: WORD •

    $default  reduce using rule 20 (command_word)


State 3

    6 command: SHNEWLINE •

    $default  reduce using rule 6 (command)


State 4

    0 $accept: goals • $end

    $end  shift, and go to state 12


State 5

    1 goals: commands •
    3 commands: commands • command

    error      shift, and go to state 1
    WORD       shift, and go to state 2
    SHNEWLINE  shift, and go to state 3

    $end  reduce using rule 1 (goals)

    command           go to state 13
    complex_command   go to state 7
    simple_command    go to state 8
    command_and_args  go to state 9
    command_word      go to state 10


State 6

    2 commands: command •

    $default  reduce using rule 2 (commands)


State 7

    4 command: complex_command •

    $default  reduce using rule 4 (command)


State 8

    5 command: simple_command •

    $default  reduce using rule 5 (command)


State 9

    8 complex_command: command_and_args • piped_list iomodifier_list ampersandmodifier SHNEWLINE
    9                | command_and_args • iomodifier_list ampersandmodifier SHNEWLINE
   10                | command_and_args • piped_list iomodifier_list SHNEWLINE
   11                | command_and_args • iomodifier_list SHNEWLINE
   12 simple_command: command_and_args • iomodifier_opt SHNEWLINE

    REDIRECT  shift, and go to state 14

    SHNEWLINE        reduce using rule 14 (piped_list)
    SHNEWLINE        [reduce using rule 22 (iomodifier_list)]
    AMPERSAND        reduce using rule 14 (piped_list)
    AMPERSAND        [reduce using rule 22 (iomodifier_list)]
    APPEND           reduce using rule 14 (piped_list)
    APPEND           [reduce using rule 22 (iomodifier_list)]
    AMPERSANDAPPEND  reduce using rule 14 (piped_list)
    AMPERSANDAPPEND  [reduce using rule 22 (iomodifier_list)]
    REDIRECT         [reduce using rule 14 (piped_list)]
    REDIRECT         [reduce using rule 22 (iomodifier_list)]
    INPUT            reduce using rule 14 (piped_list)
    INPUT            [reduce using rule 22 (iomodifier_list)]
    $default         reduce using rule 14 (piped_list)

    piped_list       go to state 15
    iomodifier_list  go to state 16
    iomodifier_opt   go to state 17


State 10

   16 command_and_args: command_word • arg_list

    $default  reduce using rule 18 (arg_list)

    arg_list  go to state 18


State 11

    7 command: error SHNEWLINE •

    $default  reduce using rule 7 (command)


State 12

    0 $accept: goals $end •

    $default  accept


State 13

    3 commands: commands command •

    $default  reduce using rule 3 (commands)


State 14

   29 iomodifier_opt: REDIRECT • WORD

    WORD  shift, and go to state 19


State 15

    8 complex_command: command_and_args piped_list • iomodifier_list ampersandmodifier SHNEWLINE
   10                | command_and_args piped_list • iomodifier_list SHNEWLINE
   13 piped_list: piped_list • piped_command

    PIPE  shift, and go to state 20

    $default  reduce using rule 22 (iomodifier_list)

    piped_command    go to state 21
    iomodifier_list  go to state 22


State 16

    9 complex_command: command_and_args iomodifier_list • ampersandmodifier SHNEWLINE
   11                | command_and_args iomodifier_list • SHNEWLINE
   21 iomodifier_list: iomodifier_list • iomodifier

    SHNEWLINE        shift, and go to state 23
    AMPERSAND        shift, and go to state 24
    APPEND           shift, and go to state 25
    AMPERSANDAPPEND  shift, and go to state 26
    REDIRECT         shift, and go to state 14
    INPUT            shift, and go to state 27

    iomodifier               go to state 28
    iomodifier_ipt           go to state 29
    ampersandappendmodifier  go to state 30
    iomodifier_opt           go to state 31
    appendmodifier           go to state 32
    ampersandmodifier        go to state 33


State 17

   12 simple_command: command_and_args iomodifier_opt • SHNEWLINE

    SHNEWLINE  shift, and go to state 34


State 18

   16 command_and_args: command_word arg_list •
   17 arg_list: arg_list • argument

    WORD  shift, and go to state 35

    $default  reduce using rule 16 (command_and_args)

    argument  go to state 36


State 19

   29 iomodifier_opt: REDIRECT WORD •

    $default  reduce using rule 29 (iomodifier_opt)


State 20

   15 piped_command: PIPE • command_and_args

    WORD  shift, and go to state 2

    command_and_args  go to state 37
    command_word      go to state 10


State 21

   13 piped_list: piped_list piped_command •

    $default  reduce using rule 13 (piped_list)


State 22

    8 complex_command: command_and_args piped_list iomodifier_list • ampersandmodifier SHNEWLINE
   10                | command_and_args piped_list iomodifier_list • SHNEWLINE
   21 iomodifier_list: iomodifier_list • iomodifier

    SHNEWLINE        shift, and go to state 38
    AMPERSAND        shift, and go to state 24
    APPEND           shift, and go to state 25
    AMPERSANDAPPEND  shift, and go to state 26
    REDIRECT         shift, and go to state 14
    INPUT            shift, and go to state 27

    iomodifier               go to state 28
    iomodifier_ipt           go to state 29
    ampersandappendmodifier  go to state 30
    iomodifier_opt           go to state 31
    appendmodifier           go to state 32
    ampersandmodifier        go to state 39


State 23

   11 complex_command: command_and_args iomodifier_list SHNEWLINE •

    $default  reduce using rule 11 (complex_command)


State 24

   31 ampersandmodifier: AMPERSAND •

    $default  reduce using rule 31 (ampersandmodifier)


State 25

   30 appendmodifier: APPEND • WORD

    WORD  shift, and go to state 40


State 26

   28 ampersandappendmodifier: AMPERSANDAPPEND • WORD

    WORD  shift, and go to state 41


State 27

   27 iomodifier_ipt: INPUT • WORD

    WORD  shift, and go to state 42


State 28

   21 iomodifier_list: iomodifier_list iomodifier •

    $default  reduce using rule 21 (iomodifier_list)


State 29

   25 iomodifier: iomodifier_ipt •

    $default  reduce using rule 25 (iomodifier)


State 30

   24 iomodifier: ampersandappendmodifier •

    $default  reduce using rule 24 (iomodifier)


State 31

   23 iomodifier: iomodifier_opt •

    $default  reduce using rule 23 (iomodifier)


State 32

   26 iomodifier: appendmodifier •

    $default  reduce using rule 26 (iomodifier)


State 33

    9 complex_command: command_and_args iomodifier_list ampersandmodifier • SHNEWLINE

    SHNEWLINE  shift, and go to state 43


State 34

   12 simple_command: command_and_args iomodifier_opt SHNEWLINE •

    $default  reduce using rule 12 (simple_command)


State 35

   19 argument: WORD •

    $default  reduce using rule 19 (argument)


State 36

   17 arg_list: arg_list argument •

    $default  reduce using rule 17 (arg_list)


State 37

   15 piped_command: PIPE command_and_args •

    $default  reduce using rule 15 (piped_command)


State 38

   10 complex_command: command_and_args piped_list iomodifier_list SHNEWLINE •

    $default  reduce using rule 10 (complex_command)


State 39

    8 complex_command: command_and_args piped_list iomodifier_list ampersandmodifier • SHNEWLINE

    SHNEWLINE  shift, and go to state 44


State 40

   30 appendmodifier: APPEND WORD •

    $default  reduce using rule 30 (appendmodifier)


State 41

   28 ampersandappendmodifier: AMPERSANDAPPEND WORD •

    $default  reduce using rule 28 (ampersandappendmodifier)


State 42

   27 iomodifier_ipt: INPUT WORD •

    $default  reduce using rule 27 (iomodifier_ipt)


State 43

    9 complex_command: command_and_args iomodifier_list ampersandmodifier SHNEWLINE •

    $default  reduce using rule 9 (complex_command)


State 44

    8 complex_command: command_and_args piped_list iomodifier_list ampersandmodifier SHNEWLINE •

    $default  reduce using rule 8 (complex_command)
